# AgenticOps

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  MCP_TOOLS.md
Meraki Magic MCP/: .gitignore  COMPARISON.md  INSTALL.md  LICENSE  OPTIMIZATIONS.md  QUICKSTART.md  README-DYNAMIC.md  README.md  UPDATE_GUIDE.md  inspect_tools.py  meraki-mcp-dynamic.py  meraki-mcp.py  pyproject.toml  requirements.txt
backend/: config.py  main.py  pyproject.toml  requirements.txt
backend/agents/: canvas_agent.py  compliance.py  discovery.py  graph.py  orchestrator.py  security.py  state.py  table_extractor.py  tools.py  troubleshooting.py
backend/api/: models.py  rest.py  websocket.py
backend/mcp_client/: manager.py  types.py
backend/prompts/: __init__.py  canvas.md  compliance.md  discovery.md  orchestrator.md  security.md  troubleshooting.md
backend/skills/: SKILLS.md  config_audit.md  loader.py  network_inventory.md  security_posture.md  wan_performance.md  wireless_troubleshooting.md
backend/state/: session.py
frontend/: package.json
frontend/src/: index.css
frontend/src/components/canvas/: CanvasPanel.tsx
frontend/src/components/cards/: AlertSummaryCard.tsx  BarChartCard.tsx  CardHeader.tsx  CardNode.tsx  DataTableCard.tsx  LineChartCard.tsx  NetworkHealthCard.tsx  TextReportCard.tsx  cardRegistry.ts
frontend/src/hooks/: useCanvas.ts  useChat.ts  useWebSocket.ts
frontend/src/store/: canvasSlice.ts  chatSlice.ts  connectionSlice.ts
frontend/src/types/: card.ts  chat.ts  websocket.ts
frontend/src/utils/: cardPositioning.ts  formatters.ts
(+9 files in other folders)
