[project]
name = "agenticops-backend"
version = "0.1.0"
description = "AgenticOps - AI-powered network operations with multi-agent architecture"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "mcp[cli]>=1.8.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
